<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp">

        <Button
            android:id="@+id/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_random_data"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

        <EditText
            android:id="@+id/ageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/material_dynamic_primary0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/ageTextView"
            app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />


        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textColor="@color/material_dynamic_primary0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/firstNameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:textColor="@color/material_dynamic_primary0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/idTextView" />


        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkedButton="@id/maleRadioBtn"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/genderTextView"
            app:layout_constraintTop_toBottomOf="@+id/ageEditText">

            <RadioButton
                android:id="@+id/maleRadioBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_gender_male" />

            <RadioButton
                android:id="@+id/femaleRadioBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radio_gender_female" />

        </RadioGroup>


        <TextView
            android:id="@+id/ageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/employee_age"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/ageEditText"
            app:layout_constraintEnd_toStartOf="@+id/ageEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ageEditText" />


        <TextView
            android:id="@+id/firstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/employee_first_name"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/firstNameEditText"
            app:layout_constraintEnd_toStartOf="@+id/firstNameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstNameEditText" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/employee_name"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/nameEditText"
            app:layout_constraintEnd_toStartOf="@+id/nameEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameEditText" />


        <TextView
            android:id="@+id/idTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/employee_id"
            android:textColor="@color/design_default_color_primary"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/idTextView"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="ID:" />

        <TextView
            android:id="@+id/idTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/design_default_color_primary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/idTitleTextView"
            app:layout_constraintTop_toTopOf="@id/idTitleTextView"
            tools:text="xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/employee_gender"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/genderRadioGroup"
            app:layout_constraintEnd_toStartOf="@+id/genderRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/genderRadioGroup" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>